chore: upgrade astro

--- a/src/content/blog/2022/generics-in-go-1-18/index.mdx
+++ b/src/content/blog/2022/generics-in-go-1-18/index.mdx
@@ -14,6 +14,8 @@ go install golang.org/dl/go1.18rc1@latest
 go1.18rc1 download
 ```
 
+hola
+
 One of the most interesting novelties is the _generics_ in a similar way we have in other languages (C#, Java, Typescript, etc...). Generics allow us as developers, for example, to create a function that works with different types. The classical example Go uses in its blog to explain [why generics](https://go.dev/blog/why-generics) (highly recommended), is a function that does some operation over an array, for example, reverse the array. Now we must write the same function for different types, ex: int, float, string, etc
 
 ```go
