--- a/src/content/blog/2026/2026-01-31-mac-mierda/index.mdx
+++ b/src/content/blog/2026/2026-01-31-mac-mierda/index.mdx
@@ -87,3 +87,9 @@ iterm2 keymaps:
 
 
 
+## Conclusion
+After customizing my MacOS experience, I can say that I can work in a similar way as in my personal computer, and the friction changing between both computers is minimal.
+
+This is not a flame post, I just want to share my experience and config, and know if you are in a similar situation, and how you solved it.
+
+Any feedback or suggestion to improve my setup is welcome!
