--- a/src/content/blog/2026/2026-01-31-mac-mierda/index.mdx
+++ b/src/content/blog/2026/2026-01-31-mac-mierda/index.mdx
@@ -1,95 +1,410 @@
 ---
-title: 'Use a Mac as a "normal" pc'
-pubDate: 2026-02-3
+title: 'Use a Mac as a "normal" PC'
+pubDate: 2026-02-02
 slug: use-a-mac-as-a-normal-pc
-# heroVideo: ./cover.webm
+heroVideo: ./cover.webm
 heroImage: ./cover.png
 heroImageMeta:
   prompt: ''
-  author: ''
+  author: 'Gemini Nano Banana 3'
 tags:
   - setup
   - mac
   - pc
 ---
 
-Anyone who knows me well knows that I NOT am a big fan of Apple products and their philosophy, most people say they are amazing but I can not share that opinion. But this post is not about that. Let me explain why I want to use a Mac like a "normal" pc.
+Anyone who knows me well knows that I'm not a big fan of Apple products and their philosophy. Most people say they are amazing, but I can't share that opinion. But this post is not about that. Let me explain why I want to use a Mac like a "normal" PC.
+
+I'm working as a software developer, remotely, and I have a personal desktop computer at home that I use to develop my projects, play games, and do everything I need. I've been using Linux (Ubuntu) for 20 years, and I like it because I can customize it how I want, use free software, and feel in control of my computer.
+
+Two years ago, I started a new position at a new company, and they provided me with a MacBook Pro as my work computer. It wasn't something I liked, but I had no choice (other than not accepting it or not working there).
+
+My first thought was: OK, this could be a problem. I found that macOS is much better than I expected, but I still couldn't work in the same way as on my personal computer.
+Still, my experience with macOS was not great: I found some UX decisions really annoying, and I missed some features I used in Linux, like window tiling and snapping, the way to see all my open windows by just clicking the app icon in the Dock, and (on top of that) the maximize button behavior, which I still don't understand. Also, the Command and Control keys are swapped, and there are many other small things that made my experience worse.
+
+I use the MacBook as a desktop computer, always closed, and connected to two external monitors, a keyboard, a mouse, and other USB devices using a KVM switch, so I can switch from my personal computer to the work computer easily.
+
+I wanted to minimize as much as possible the friction when switching from my work computer to my personal computer, so I started to customize macOS to be more like a "normal" PC. This is what I did:
 
 
-I'm working as a software developer, in remote mode, and I have a personal desktop computer at home I use to develop my projects, play games, and do everything I need. I had been using Linux (Ubuntu) for 20 years, and I like it because I can customize it as I want, I can use free software, and I feel in control of my computer.
+- **Disable Touch ID**: since I use the MacBook closed. [How to disable Touch ID](https://www.quora.com/How-can-I-disable-the-TouchID-on-my-MacBook-Pro)
 
-2 years ago, I started a new position at a new company, and they provided me with a MacBook Pro as my work computer. I was something I don'like it but, I have no choice (only not accept it or not work there).
+- **Make Fn keys the default behavior**: The Fn keys have two behaviors: the special behavior (volume, brightness, etc.) and the normal behavior (F1, F2, F3...). I want the normal behavior all the time. [How to do it](https://support.apple.com/en-us/102439)
 
-My first thought was ok, this could be a problem I a found OSX is much better than I expected, and I could not work in the same way in my personal computer.
-But my experience with MacOS was not good, I found some UX decisions really annoying, and I missed some features I used in Linux, like the window titling and anchoring, the way to see all my open windows, just clicking in the app icon in the dock, words apart is the maximize button behavior, that I still not understaning. Also the command and control keys swapped places, and many other small things that made my experience not good.
+- **Disable "reactions"**: I really hate this thing popping up in any meeting. [How to disable it](https://it.cornell.edu/zoom/apple-video-effects)
 
-I use the MacBook as a desktop computer, always closed, and connected to 2 external monitors, keyboard,mouse, and other usb devices using a KVM switch, so I can change from my personal computer to the work computer easily.
+- **Dock on the left and not hidden**: I'm very used to having the Dock on the left side and always visible. The solution is not perfect for me because the Dock is centered and the app icon positions change, which prevents me from using muscle memory, but it's something. [How to do it](https://support.apple.com/en-bn/guide/mac-help/mchlp1119/mac)
 
-I wanted to minimize as much as possible the friction changing my work computer to my personal computer, so I started to customize my MacOS to be more like a "normal" pc, and this is what I did:
-
-
-- **Disable touchID**: as I use the MacBook closed. [How to disable touchID](https://www.quora.com/How-can-I-disable-the-TouchID-on-my-MacBook-Pro)
-
-- **Make Fn keys permanent behavior**: As you know the fn keys have 2 behaviors, the special behavior (volume, brightness, etc) and the normal behavior (F1,F2,F3...). I want the normal behavior all the time. [How to do it]( 
-https://support.apple.com/en-us/102439)
-
-- **Disable "reactions"**: I really hate this thing poping up in any meet [How to disable it] https://it.cornell.edu/zoom/apple-video-effects
-
-- **Dock on left and not hidden**: I'm very used to have the dock on the left side and always visible. The solucion is not perfect for me as the dock is centered and the app icons position changes impeding to use muscular memory, but is something. [How to do it](https://support.apple.com/en-bn/guide/mac-help/mchlp1119/mac)
-
-- **Invert mouse scroll**: I prefer the normal scroll behavior in the mouse wheen, not the "natural" one. I'm not understaning why is not possible to define a different behavior for mouse and touchpad [How to do it](https://support.apple.com/en-us/HT204530)
+- **Invert mouse scroll**: I prefer the normal scroll behavior on the mouse wheel, not the "natural" one. I still don't understand why it's not possible to define a different behavior for mouse and touchpad. [How to do it](https://support.apple.com/en-us/HT204530)
 
 
-## Accesibility
+## Accessibility
 
-For me A person with a far to be perfect vision I need to increase the interface size and contrast to be able to read and find elements in the screen easily.
+For me, as a person with far-from-perfect vision, I need to increase the interface size and contrast to be able to read and find elements on the screen easily.
 
-I found OSX accesibility options very bad, as for example I can not find a way to scale the interface, So I have to increase the text size but this doesn't apply to most of the interface elements like buttons.
+I found macOS accessibility options pretty limited; for example, I can't find a way to scale the whole interface. So I have to increase the text size, but this doesn't apply to most interface elements like buttons.
 
-- **Disable glass transparency**: For me A person with a far to be perfect vision, GlassUI is terrible and makes hard to read or find elements, I prefer a more solid look. [How to do it](https://discussions.apple.com/thread/256137197?sortBy=rank)
+- **Disable transparency**: For me, as a person with far-from-perfect vision, this effect is terrible and makes it hard to read or find elements. I prefer a more solid look. [How to do it](https://discussions.apple.com/thread/256137197?sortBy=rank)
 
-- **Disable UI animations**: This is just personal, I dont like them: [How to do it](https://support.apple.com/en-ph/guide/mac-help/mchlc03f57a1/mac)
+- **Disable UI animations**: This one is personal: I don't like them. [How to do it](https://support.apple.com/en-ph/guide/mac-help/mchlc03f57a1/mac)
 
 
 ## Keyboard
 
-I explored many options to customize the keyboard behavior and different programs, but as my keyboard is a VIA/QMK compatible keyboard, With multiple layers and macros, 
+I explored many options and different programs to customize the keyboard behavior, but since my keyboard is a VIA/QMK-compatible keyboard with multiple layers and macros, I ended up handling most of it there.
 
-The frist thing i did is to use one layout for MacOS remaping the necessary keys to have a more "normal" pc layout, like swapping command and control keys, remaping the alt key to be the windows key, etc. And I have to keys to change between MacOS layout and normal pc layout.
+The first thing I did was use one layout for macOS, remapping the necessary keys to have a more "normal" PC layout (swapping Command and Control keys, remapping the Alt key to be the Windows key, etc.). And I have two keys to switch between the macOS layout and the normal PC layout.
 
-- **Home end keys**: I understand the way they work in MacOS (end go goes to end of the text, not the end of the current line), is just another way to do it, but I prefer the normal behavior (end goes to the end of the line). As the "regular" behavior is achievable using command+left/right arrow, I created a macro to do that when I press home or end keys.
+- **Home/End keys**: I understand the way they work in macOS (End goes to the end of the text, not the end of the current line). It's just another way to do it, but I prefer the normal behavior (End goes to the end of the line). Since the "regular" behavior is achievable using Command + Left/Right Arrow, I created a macro to do that when I press Home or End.
 
-- For some remaps I used Karabiner-Elements, that is a powerful keyboard remapper for MacOS. [Karabiner-Elements](https://karabiner-elements.pqrs.org/), for example for the alt-tab behavior.
+- For some remaps I used Karabiner-Elements, which is a powerful keyboard remapper for macOS. [Karabiner-Elements](https://karabiner-elements.pqrs.org/), for example for the Alt-Tab behavior.
 
-- **Disable input as mobile**: For me this autocomplete behavior like in the mobile phones is very annoying as impides to hold and repeat  https://discussions.apple.com/thread/3646726?sortBy=best 
+- **Disable mobile-like input**: For me, this autocomplete behavior (like on mobile phones) is very annoying because it prevents holding a key to repeat. [Discussion thread](https://discussions.apple.com/thread/3646726?sortBy=best)
 
 
-## Apps 
-- I replaced spotlight for [Raycast](https://www.raycast.com/) and remap the activation key "Win+space" as it is not possible to just use "Win" key alone.
+## Apps
 
-- [Rectangle app](https://rectangleapp.com/): to manage windows with keyboard shortcuts, and anchoring windows to screen sides and corners.
+- I replaced Spotlight with [Raycast](https://www.raycast.com/) and remapped the activation key to "Win+Space", since it's not possible to use the "Win" key alone.
 
-- [Flameshot](https://flameshot.org/): for screenshots, as the default MacOS screenshot tool is very limited. I like to do annotations in the screenshots I take.
+- [Rectangle app](https://rectangleapp.com/): manage windows with keyboard shortcuts, and anchor windows to screen sides and corners.
+
+- [Flameshot](https://flameshot.org/): for screenshots, as the default macOS screenshot tool is very limited. I like to annotate the screenshots I take.
 
 
 ## Terminal
-I deciced to use iterm2 as terminal emulator. The terminal (any) is challenging as after do the keyboard swap between Cmd and Ctrl, the terminal does it too, having the original behavior of Ctrl key in the Cmd key, and that is not what I want.
+I decided to use iTerm2 as my terminal emulator. Terminals (any) are challenging because after doing the keyboard swap between Cmd and Ctrl, the terminal swaps them too, leaving the original behavior of the Ctrl key on the Cmd key, and that is not what I want.
 
-- Remaping all the escape sequences to have the normal behavior of Ctrl key in the Ctrl key, not in the Cmd key. I created a custom keymap in iterm2 to do that.
+- Remapping all the escape sequences to have the normal behavior of the Ctrl key on the Ctrl key, not on the Cmd key. I created a custom keymap in iTerm2 to do that.
 
 This is my configuration export:
+
+<div class="code-block-max-300">
 ```json
-{"Key Mappings":{"0x6a-0x100000-0x26":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x0a","Escaping":2},"0x6c-0x100000-0x25":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x0c","Escaping":2},"0xf700-0x300000":{"Text":"","Action":7},"0xf702-0x300000-0x7b":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x01","Escaping":2},"0xf72c-0x100000":{"Text":"","Action":9},"0x61-0x100000-0x0":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x01","Escaping":2},"0xf729-0x100000":{"Text":"","Action":5},"0xf72c-0x20000":{"Text":"","Action":9},"0x56-0x120000-0x9":{"Version":2,"Apply Mode":0,"Action":70,"Text":"","Escaping":2},"0x6f-0x100000-0x1f":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x0F","Escaping":2},"0x43-0x120000-0x8":{"Version":2,"Apply Mode":0,"Action":69,"Text":"","Escaping":2},"0x4f-0x120000-0x1f":{"Version":2,"Apply Mode":0,"Action":28,"Text":"D460DB96-22D0-487D-8F65-87F18563835F","Escaping":2},"0x75-0x100000-0x20":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x15","Escaping":2},"0x74-0x100000-0x11":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x14","Escaping":2},"0x72-0x100000-0xf":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x12","Escaping":2},"0x70-0x100000-0x23":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x10","Escaping":2},"0xf72d-0x20000":{"Text":"","Action":8},"0xf703-0x300000-0x7c":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x05","Escaping":2},"0x65-0x100000-0xe":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x05","Escaping":2},"0xf72b-0x100000":{"Text":"","Action":4},"0x54-0x120000-0x11":{"Version":2,"Apply Mode":0,"Action":27,"Text":"D460DB96-22D0-487D-8F65-87F18563835F","Escaping":2},"0x6b-0x100000-0x28":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x0b","Escaping":2},"0x71-0x100000-0xc":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x11","Escaping":2},"0x62-0x100000-0xb":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x02","Escaping":2},"0x67-0x100000-0x5":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x07","Escaping":2},"0x73-0x100000-0x1":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x13","Escaping":2},"0x5d-0x100000-0x1e":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x0d","Escaping":2},"0x78-0x100000-0x7":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x18","Escaping":2},"0x77-0x100000-0xd":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x17","Escaping":2},"0xf703-0x320000":{"Text":"","Action":34},"0x7a-0x100000-0x6":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x1a","Escaping":2},"0x45-0x120000-0xe":{"Version":2,"Apply Mode":0,"Action":29,"Text":"D460DB96-22D0-487D-8F65-87F18563835F","Escaping":2},"0x19-0x60000":{"Text":"","Action":39},"0x5b-0x100000-0x21":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x1b","Escaping":2},"0x69-0x100000-0x22":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x09","Escaping":2},"0x79-0x100000-0x10":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x19","Escaping":2},"0x64-0x100000-0x2":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x04","Escaping":2},"0x76-0x100000-0x9":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x16","Escaping":2},"0x6e-0x100000-0x2d":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x0e","Escaping":2},"0xf701-0x300000":{"Text":"","Action":6},"0x0-0x120000-0x16":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x1e","Escaping":2},"0xf702-0x320000":{"Text":"","Action":33},"0x6d-0x100000-0x2e":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x0d","Escaping":2},"0xf72d-0x100000":{"Text":"","Action":8},"0x66-0x100000-0x3":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x06","Escaping":2},"0x63-0x100000-0x8":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x03","Escaping":2},"0x5a-0x120000-0x6":{"Version":2,"Apply Mode":0,"Action":44,"Text":"","Escaping":2},"0x9-0x40000":{"Text":"","Action":32},"0x68-0x100000-0x4":{"Version":2,"Apply Mode":0,"Action":11,"Text":"0x08","Escaping":2}},"Touch Bar Items":{}}
+{
+  "Key Mappings": {
+    "0x6a-0x100000-0x26": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x0a",
+      "Escaping": 2
+    },
+    "0x6c-0x100000-0x25": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x0c",
+      "Escaping": 2
+    },
+    "0xf700-0x300000": {
+      "Text": "",
+      "Action": 7
+    },
+    "0xf702-0x300000-0x7b": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x01",
+      "Escaping": 2
+    },
+    "0xf72c-0x100000": {
+      "Text": "",
+      "Action": 9
+    },
+    "0x61-0x100000-0x0": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x01",
+      "Escaping": 2
+    },
+    "0xf729-0x100000": {
+      "Text": "",
+      "Action": 5
+    },
+    "0xf72c-0x20000": {
+      "Text": "",
+      "Action": 9
+    },
+    "0x56-0x120000-0x9": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 70,
+      "Text": "",
+      "Escaping": 2
+    },
+    "0x6f-0x100000-0x1f": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x0F",
+      "Escaping": 2
+    },
+    "0x43-0x120000-0x8": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 69,
+      "Text": "",
+      "Escaping": 2
+    },
+    "0x4f-0x120000-0x1f": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 28,
+      "Text": "D460DB96-22D0-487D-8F65-87F18563835F",
+      "Escaping": 2
+    },
+    "0x75-0x100000-0x20": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x15",
+      "Escaping": 2
+    },
+    "0x74-0x100000-0x11": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x14",
+      "Escaping": 2
+    },
+    "0x72-0x100000-0xf": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x12",
+      "Escaping": 2
+    },
+    "0x70-0x100000-0x23": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x10",
+      "Escaping": 2
+    },
+    "0xf72d-0x20000": {
+      "Text": "",
+      "Action": 8
+    },
+    "0xf703-0x300000-0x7c": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x05",
+      "Escaping": 2
+    },
+    "0x65-0x100000-0xe": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x05",
+      "Escaping": 2
+    },
+    "0xf72b-0x100000": {
+      "Text": "",
+      "Action": 4
+    },
+    "0x54-0x120000-0x11": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 27,
+      "Text": "D460DB96-22D0-487D-8F65-87F18563835F",
+      "Escaping": 2
+    },
+    "0x6b-0x100000-0x28": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x0b",
+      "Escaping": 2
+    },
+    "0x71-0x100000-0xc": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x11",
+      "Escaping": 2
+    },
+    "0x62-0x100000-0xb": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x02",
+      "Escaping": 2
+    },
+    "0x67-0x100000-0x5": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x07",
+      "Escaping": 2
+    },
+    "0x73-0x100000-0x1": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x13",
+      "Escaping": 2
+    },
+    "0x5d-0x100000-0x1e": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x0d",
+      "Escaping": 2
+    },
+    "0x78-0x100000-0x7": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x18",
+      "Escaping": 2
+    },
+    "0x77-0x100000-0xd": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x17",
+      "Escaping": 2
+    },
+    "0xf703-0x320000": {
+      "Text": "",
+      "Action": 34
+    },
+    "0x7a-0x100000-0x6": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x1a",
+      "Escaping": 2
+    },
+    "0x45-0x120000-0xe": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 29,
+      "Text": "D460DB96-22D0-487D-8F65-87F18563835F",
+      "Escaping": 2
+    },
+    "0x19-0x60000": {
+      "Text": "",
+      "Action": 39
+    },
+    "0x5b-0x100000-0x21": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x1b",
+      "Escaping": 2
+    },
+    "0x69-0x100000-0x22": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x09",
+      "Escaping": 2
+    },
+    "0x79-0x100000-0x10": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x19",
+      "Escaping": 2
+    },
+    "0x64-0x100000-0x2": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x04",
+      "Escaping": 2
+    },
+    "0x76-0x100000-0x9": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x16",
+      "Escaping": 2
+    },
+    "0x6e-0x100000-0x2d": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x0e",
+      "Escaping": 2
+    },
+    "0xf701-0x300000": {
+      "Text": "",
+      "Action": 6
+    },
+    "0x0-0x120000-0x16": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x1e",
+      "Escaping": 2
+    },
+    "0xf702-0x320000": {
+      "Text": "",
+      "Action": 33
+    },
+    "0x6d-0x100000-0x2e": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x0d",
+      "Escaping": 2
+    },
+    "0xf72d-0x100000": {
+      "Text": "",
+      "Action": 8
+    },
+    "0x66-0x100000-0x3": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x06",
+      "Escaping": 2
+    },
+    "0x63-0x100000-0x8": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x03",
+      "Escaping": 2
+    },
+    "0x5a-0x120000-0x6": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 44,
+      "Text": "",
+      "Escaping": 2
+    },
+    "0x9-0x40000": {
+      "Text": "",
+      "Action": 32
+    },
+    "0x68-0x100000-0x4": {
+      "Version": 2,
+      "Apply Mode": 0,
+      "Action": 11,
+      "Text": "0x08",
+      "Escaping": 2
+    }
+  },
+  "Touch Bar Items": {}
+}
+
 ```
 
-- Allow text selection with key board: https://superuser.com/questions/93573/select-text-in-iterm-using-keyboard
-iterm2 keymaps: 
+</div>
+
+- Allow text selection with keyboard: [Super User thread](https://superuser.com/questions/93573/select-text-in-iterm-using-keyboard)
+iTerm2 keymaps:
 
 
 
 ## Conclusion
-After customizing my MacOS experience, I can say that I can work in a similar way as in my personal computer, and the friction changing between both computers is minimal.
+After customizing my macOS experience, I can work in a similar way as on my personal computer, and the friction when changing between both computers is minimal.
 
-This is not a flame post, I just want to share my experience and config, and know if you are in a similar situation, and how you solved it.
+This is not a flame post. I just want to share my experience and config, and see if you are in a similar situation and how you solved it.
 
 Any feedback or suggestion to improve my setup is welcome!
