--- a/src/content/blog/2026/2026-01-05-how-to-know-deployed-frontend-version/index.mdx
+++ b/src/content/blog/2026/2026-01-05-how-to-know-deployed-frontend-version/index.mdx
@@ -22,14 +22,14 @@ tags:
   - vite
   - javascript
   - typescript
+excerpt: 'Learn how to embed version information in your frontend build so you can instantly verify which code is actually deployed in production.'
 ---
 
-Nowadays when you deploy a new version of your frontend application, you don't push your code to production directly. Instead, you run (typically  automatically) a deployment pipeline in the CI that builds your application, runs tests, and finally deploys the built assets to a hosting service.
+Nowadays when you deploy a new version of your frontend application, you don't push your code to production directly. Instead, you run (typically automatically) a deployment pipeline in the CI that builds your application, runs tests, and finally deploys the built assets to a hosting service.
 
 This process takes some time, and when multiple developers are working in the same code base, it can happen that while one developer is deploying a new version, another developer pushes new changes to the main branch and triggers a new deployment pipeline. This creates a deployment race condition: if multiple pipelines run concurrently, the last one to finish determines which code is deployed, regardless of which was triggered first. This means you don't really know which version of the code is currently deployed unless you check the deployment logs or the CI status page, which is slow and a lot of work.
 
-Knowing exactly which version of your frontend is deployed is crucial for debugging issues, providing user support, and ensuring that hotfixes have been successfully rolled out. 
-
+Knowing exactly which version of your frontend is deployed is crucial for debugging issues, providing user support, and ensuring that hotfixes have been successfully rolled out.
 
 We need a better (simpler and faster) way to know which version of our frontend application is currently deployed.
 
@@ -43,7 +43,6 @@ The most reliable solution is to embed version information directly in the HTML 
 
 While you could include the version in a separate text or JSON file, this approach has drawbacks. If the file wasn't accessed before and you ask the user to retrieve it to get the version, you will get the correct one, but the browser can still be serving a cached version of the entrypoint. Since in a SPA the entrypoint is typically `index.html`, this file is the best candidate to include the version information.
 
-
 ## Version ID
 
 We need to define how we will get the version of our code. It should be a number or string that identifies the build uniquely and you can use it in other places to relate it with the code base. That will depend on your deployment strategy. For example:
@@ -54,7 +53,6 @@ We need to define how we will get the version of our code. It should be a number
 - **CI build number**: `build-5678` - if you are using a CI/CD tool that provides build numbers
 
 You can also combine it with the deployment environment (e.g., `production`, `staging`, `development`) to make it more informative, like `production-v1.2.3` or `staging-pr-1234`.
-
 
 ## Implementation
 
@@ -67,8 +65,8 @@ We will create a simple Vite plugin that will replace placeholders in the `index
 export const htmlEnvPlugin = (
   env: Record<string, string>
 ): {
-  name: string
-  transformIndexHtml: (html: string) => string
+  name: string;
+  transformIndexHtml: (html: string) => string;
 } => {
   return {
     name: 'html-transform',
@@ -76,9 +74,9 @@ export const htmlEnvPlugin = (
       // Replace placeholders like %PLACEHOLDER% with values from env object
       // The regex /%(.*?)%/g matches any text between % symbols
       // p1 captures the placeholder name, which is used as a key to lookup the value
-      html.replace(/%(.*?)%/g, (match, p1) => env[p1] ?? '')
-  }
-}
+      html.replace(/%(.*?)%/g, (match, p1) => env[p1] ?? ''),
+  };
+};
 ```
 
 This plugin will look for placeholders in the format `%PLACEHOLDER%` and replace them with the corresponding value from the `env` object. This placeholders approach will allow you to add more information from the env vars if needed, for example the build date/time.
@@ -98,8 +96,8 @@ export default defineConfig({
     })
   ]
 })
-} 
-``` 
+}
+```
 
 We need to add the placeholder in the `index.html` file.
 
@@ -136,6 +134,7 @@ const buildDate = document.querySelector('meta[name="build-date"]')?.content;
 ```
 
 Finally, we need to set the `BUILD_VERSION` environment variable in the CI pipeline before running the build command. How you do this will depend on your CI tool, but let's assume you are using GitHub Actions. You can use the following step to set the variable using the PR number.
+
 ```yaml
 - name: Set build version
   run: echo "BUILD_VERSION=pr-${{ github.event.pull_request.number }}" >> $GITHUB_ENV
